BusOne/src/objects/BOT_Test_Graph__c.object
<CustomObject>
    <description>To test the Drug access graph on account detail page</description>
    <fields>
        <fullName>BOT_Access__c</fullName>
        <label>Access %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It is a Lookup relation ship to Account Object</description>
        <label>BOT_Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Test Graph</relationshipLabel>
        <relationshipName>BOT_Drug_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Drug_ID__c</fullName>
        <label>Drug ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BOT_Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Test Graph</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Graph</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>